added Telegram Scheduler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #Server
 server.port=8081
+
+# application.properties
+spring.config.import=optional:classpath:application-secrets.properties
+
+# ?????????? (?????? ???? ? 9:00)
+birthday.notification.cron=0 * * * * *
