--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// Source: https://mvnrepository.com/artifact/org.telegram/telegrambots
+	implementation("org.telegram:telegrambots:6.9.7.1")
 }
 
 tasks.named('test') {
