--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,5 @@ server.port=8081
 # application.properties
 spring.config.import=optional:classpath:application-secrets.properties
 
-# ?????????? (?????? ?????? )
+# schedule: every minute
 birthday.notification.cron=0 * * * * *
